# mabel

./: Cargo.toml  justfile  rustfmt.toml
mabel-core/: Cargo.toml
mabel-server/: Cargo.toml
mabel-tools/: Cargo.toml
mabel-tools/src/: calendar.rs  lib.rs
src/: cli.rs  config.rs  error.rs  lib.rs
