[workspace]
resolver = "2"
members = [
  "mabel-core",
  "mabel-tools",
  "mabel-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
rmcp = "0.2.1"
chrono = "0.4.41"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.46.1"

