[package]
name = "mabel"
edition = "2021"

[features]
default = ["openai"]
openai  = ["async-openai"]
ollama  = ["ollama-rs"]
grobid  = []

[dependencies]
anyhow = "1"
thiserror = "2.0.12"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
quick-xml = "0.38.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tera = "1.20"
chrono = { version = "0.4", features = ["serde"] }
sanitize-filename = "0.6.0"
slug = "0.1"
async-openai = { version = "0.29.0", optional = true }
ollama-rs    = { version = "0.3.2",  optional = true }
governor     = "0.10.1"
backoff      = "0.4"
indicatif    = "0.18.0"
url = "2.5.4"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
insta = { version = "1", features = ["yaml"] }

