[package]
name = "mabel-tools"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true } 
tracing = { workspace = true } 
rmcp = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
google-calendar3 = "6.0.0+20240523"

